// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider     = "prisma-client"
  output       = "../src/generated/prisma"
  moduleFormat = "cjs"
}

datasource db {
  provider = "postgresql"
}

enum TransactionType {
  INCOME
  EXPENSE
}

enum CategoryType {
  INCOME
  EXPENSE
}

enum Role {
  USER
  ADMIN
}

model User {
  id           String        @id @default(uuid())
  email        String        @unique
  name         String
  password     String
  role         Role          @default(USER)
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  categories   Category[]
  transactions Transaction[]
  sessions     UserSession[]
}

model UserSession {
  id               String   @id @default(uuid())
  userId           String
  user             User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  refreshTokenHash String
  deviceInfo       String?
  createdAt        DateTime @default(now())
  expiresAt        DateTime

  @@index([userId])
  @@index([refreshTokenHash])
  @@index([expiresAt])
}

model Category {
  id             String        @id @default(uuid())
  name           String
  normalizedName String
  type           CategoryType
  isSystem       Boolean       @default(false)
  version        Int           @default(1)
  userId         String
  user           User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  transactions   Transaction[]
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt

  @@unique([userId, normalizedName])
  @@index([userId, createdAt])
  @@index([userId, name])
  @@index([userId, type])
}

model Transaction {
  id         String          @id @default(uuid())
  title      String
  amount     Float
  type       TransactionType
  note       String?
  userId     String
  user       User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  categoryId String
  category   Category        @relation(fields: [categoryId], references: [id])
  createdAt  DateTime        @default(now())
  updatedAt  DateTime        @updatedAt

  @@index([userId, createdAt])
  @@index([userId, type])
  @@index([userId, categoryId])
  @@index([userId, createdAt, type])
  @@index([userId, categoryId, createdAt])
  @@index([userId, amount])
  @@index([userId, title])
  @@index([categoryId])
}